--UI string changes for qt.

--- a/src/qt/forms/tradingdialog.ui
+++ b/src/qt/forms/tradingdialog.ui
@@ -2941,7 +2941,7 @@
       </rect>
      </property>
      <property name="text">
-      <string>Generate PIVX Deposit Address</string>
+      <string>Generate ZAKA Deposit Address</string>
      </property>
      <property name="icon">
       <iconset resource="../zaka.qrc">
